--- a/nodeSample/package.json
+++ b/nodeSample/package.json
@@ -1,10 +1,10 @@
 {
-  "name" : "website-using-express",
-  "version" : "0.0.1",
-  "scripts" : {
-    "start" : "node Server.js"
-  },
-  "dependencies" : {
-    "express" : "latest"
-  }
+    "name": "nodeSample",
+    "main": "server.js",
+	"version" : "0.0.1",
+    "dependencies": {
+        "express": "~4.0.0",
+        "mongoose": "~3.6.13",
+        "body-parser": "~1.0.1"
+    }
 }
